# hs-luis-client

./: LICENSE  README.md  luis-client.cabal
src/NLP/: LUIS.hs
