name:                luis-client
version:             0.1.0
synopsis:            An unofficial client for the LUIS NLP service.
description:         Please see README.md
homepage:            https://github.com/micxjo/hs-luis-client
license:             BSD3
license-file:        LICENSE
author:              Micxjo Funkcio <micxjo@fastmail.com>
maintainer:          Micxjo Funkcio <micxjo@fastmail.com>
copyright:           (c) 2016 Micxjo Funkcio
category:            Natural Language Processing, Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NLP.LUIS
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , http-client
                     , aeson
                     , lens
                     , text
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/micxjo/hs-luis-client
